@@ -1,3 +1,8 @@
+2019-12-09 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/SDCClospre.cc:
+	  Improve handling of ADDRESS_OF.
+
 2019-12-02 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/string.c:
